[tool.poetry]
name = "aws-helper"
version = "0.1.0"
description = "Let you manage your aws resources easier."
authors = ["Yingbo Gu <tensiongyb@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/guyingbo/aws-helper"
source = [
    { include = "helper.py" },
]

[tool.poetry.dependencies]
python = "*"
aioboto3 = "^4.0"
pandas = "^0.23.1"
click = "^6.7"

[tool.poetry.dev-dependencies]
pytest = "^3.5"
