[tool.poetry]
name = "aws-helper"
version = "0.1.0"
description = "Let you manage your aws resources easier."
authors = ["Yingbo Gu <tensiongyb@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
aioboto3 = "^8.0.3"
pandas = "^1.0.4"
typer = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
